Revision history for Signal-Mask

{{$NEXT}}

0.004    25-09-2010
         Fixed up MANIFEST

0.003    24-09-2010
         Added Signal::Pending
         Made scalar values of the tied hashed more meaningful

0.002    07-09-2010
         Don't export anything by default
         Use thread specific signal masks
         Include the last signal number
         Give a proper NA on Windows

0.001    31-08-2010
         First version, released on an unsuspecting world.
